--- a/api/app/templates/email/register.html
+++ b/api/app/templates/email/register.html
@@ -15,9 +15,9 @@
         padding: 5px;
     ">
         <p>Dear <b style="color: darkViolet">{{ user.username }}</b>,</p>
-        <p>You are successfully registered in Nagels Application.</p>
+        <p>You are successfully registered in Nigels Application.</p>
         <p>You can start playing now!</p>
         <p>Sincerely,</p>
-        <p>Nagels application team</p>
+        <p>Nigels application team</p>
     </div>
 </div>
