--- a/api/app/templates/email/reset_password.html
+++ b/api/app/templates/email/reset_password.html
@@ -25,6 +25,6 @@
         <p>http://localhost:3000/reset-password/{{ token }}</p>
         <p>If you have not requested a password reset simply ignore this message.</p>
         <p>Sincerely,</p>
-        <p>Nagels application team</p>
+        <p>Nigels application team</p>
     </div>
 </div>
