--- a/api/app/templates/email/reset_password.html
+++ b/api/app/templates/email/reset_password.html
@@ -17,12 +17,12 @@
         <p>Dear <b style="color: darkViolet">{{ user.username }}</b>,</p>
         <p>
             To reset your password
-            <a href="http://localhost:3000/reset-password/{{ token }}">
+            <a href="{{ nigels_url }}/reset-password/{{ token }}">
                 click here
             </a> (this is temporary link).
         </p>
         <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-        <p>http://localhost:3000/reset-password/{{ token }}</p>
+        <p>{{ nigels_url }}/reset-password/{{ token }}</p>
         <p>If you have not requested a password reset simply ignore this message.</p>
         <p>Sincerely,</p>
         <p>Nigels application team</p>
