--- a/src/sections/feedback/feedback.css
+++ b/src/sections/feedback/feedback.css
@@ -6,5 +6,5 @@
     width: 200px;
     height: 50px;
     color: green;
-    font-family: Mu"Roboto","Helvetica","Arial",sans-serifkta;
+    font-family: Mu'Montserrat', sans-serifkta;
 }
