made bets and players to bet in bet modal

--- a/src/components/dealer-button/dealer-button.css
+++ b/src/components/dealer-button/dealer-button.css
@@ -64,6 +64,12 @@
     top: -45px;
 }
 
+.dealer-button.player3outof4.mobile.landscape{
+    right: 80px;
+    left: unset;
+    top: -45px;
+}
+
 
 
 
