--- a/src/components/player-info/player-info.css
+++ b/src/components/player-info/player-info.css
@@ -64,7 +64,9 @@
     right: 0;
     height: 25px;
     width: 100px;
-    font-size: 20px;
+    padding-top: 8px;
+    font-size: 12px;
+    font-weight: 900;
     overflow: hidden;
 }
 
@@ -74,7 +76,8 @@
     width: 124px;
     top: 50px;
     left: -50px;
-    font-size: 16px;
+    padding: unset;
+    font-size: 10px;
     overflow: hidden
 }
 
