color fixes + theming

--- a/api/app/templates/email/feedback.html
+++ b/api/app/templates/email/feedback.html
@@ -1,13 +1,13 @@
 <div style="
-    border: 5px solid black;
+    border: 5px solid #808080;
     border-radius: 5%;
-    color: white;
+    color: #ffffff;
     font-size: 16px;
     font-family: Mukta;
-    background: linear-gradient(90deg, rgba(0,62,0,1) 0%, rgba(0,156,0,1) 50%, rgba(0,93,0,1) 100%);
+    background: linear-gradient(90deg, #0a2b61 0%, #5dc2fc 50%, #13428f 100%);
     padding: 20px
 ">
-    <p>New feedback message from Nägels app user <b style="color: darkViolet">{{ sender_name }}</b></p>
+    <p>New feedback message from Nägels app user <b style="color: #5dc2fc">{{ sender_name }}</b></p>
     <div style="
         background-color: hsl(0, 0%, 0%, 0.7);
         border: 1px solid #58f958;
