--- a/api/app/templates/email/reset_password.html
+++ b/api/app/templates/email/reset_password.html
@@ -1,10 +1,10 @@
 <div style="
-    border: 5px solid black;
+    border: 5px solid #808080;
     border-radius: 5%;
-    color: white;
+    color: #ffffff;
     font-size: 16px;
     font-family: Mukta;
-    background: linear-gradient(90deg, rgba(0,62,0,1) 0%, rgba(0,156,0,1) 50%, rgba(0,93,0,1) 100%);
+    background: linear-gradient(90deg, #0a2b61 0%, #5dc2fc 50%, #13428f 100%);
     padding: 20px
 ">
     <div style="
@@ -14,7 +14,7 @@
         color: #58f958;
         padding: 5px;
     ">
-        <p>Dear <b style="color: darkViolet">{{ user.username }}</b>,</p>
+        <p>Dear <b style="color: #5dc2fc">{{ user.username }}</b>,</p>
         <p>
             To reset your password
             <a href="{{ nagels_url }}/reset-password/{{ token }}">
