--- a/src/components/form-container/form-container.css
+++ b/src/components/form-container/form-container.css
@@ -26,14 +26,14 @@
 
 .form-title{
     font-weight: bold;
-    color: black;
+    color: var(--headers);
     font-size: 22px;
     line-height: 20px;
     padding-bottom: 10px;
 }
 
 .form-message{
-    color: black
+    color: var(--inputText);
 }
 
 .form-element-container{
