--- a/src/components/game-scores/game-scores.css
+++ b/src/components/game-scores/game-scores.css
@@ -5,7 +5,7 @@
     left: 50%;
     top: 15%;
     width: 50vw;
-    background-color: white;
+    background-color: var(--formsBckgr);
     border-radius: 10px;
 }
 
