--- a/src/components/nav-menu/nav-menu.css
+++ b/src/components/nav-menu/nav-menu.css
@@ -1,6 +1,6 @@
 .nav-menu{
     position: absolute;
-    background-color: black;
+    background-color: var(--contrastControlPanel);
     z-index: 200;
 }
 
@@ -132,22 +132,22 @@
 }
 
 .MuiSvgIcon-root[type=navItem].MuiSvgIcon-colorPrimary{
-    color: white;
+    color: var(--contrastControlElements);
     z-index: 100;
 }
 
 .MuiSvgIcon-root[type=navItem].MuiSvgIcon-colorSecondary{
-    color: darkviolet;
+    color: var(--secondary);
     z-index: 100;
 }
 
 .MuiSvgIcon-root[type=navItem].MuiSvgIcon-colorDisabled{
-    color: gray;
+    color: var(--disabled);
     z-index: 100;
 }
 
 .MuiSvgIcon-root[type=navItem].MuiSvgIcon-colorAction{
-    color: #01aa00;
+    color: var(--primary);
     z-index: 100;
 }
 
@@ -172,19 +172,19 @@
     top: 50%;
     transform: translate(0, -50%);
     text-align: left;
-    color: white;
+    color: var(--contrastControlElements);
     font-weight: bold;
     font-size: 20px;
 }
 
 .menu-item-title.secondary{
-    color: darkviolet
+    color: var(--secondary);
 }
 
 .menu-item-title.disabled{
-    color: gray
+    color: var(--disabled);
 }
 
 .menu-item-title.action{
-    color: #01aa00;
+    color: var(--primary);
 }
