--- a/src/components/section-header/section-header.css
+++ b/src/components/section-header/section-header.css
@@ -8,7 +8,7 @@
 
 .section-header-container.tablet.portrait{
     position: absolute;
-    background-color: white;
+    background-color: var(--formsBckgr);
     right: 0;
     bottom: 0;
     z-index: 100;
@@ -19,7 +19,7 @@
 
 .section-header-container.mobile{
     position: absolute;
-    background-color: white;
+    background-color: var(--formsBckgr);
     right: 0;
     bottom: 0;
     z-index: 100;
@@ -62,9 +62,11 @@
 }
 
 .section-title-container{
+    color: var(--headers);
 }
 
 .section-subtitle-container{
+    color: var(--headers);
 }
 
 .section-title-container.desktop{
