--- a/src/sections/feedback/feedback.css
+++ b/src/sections/feedback/feedback.css
@@ -5,6 +5,6 @@
     transform: translate(-50%, 0);
     width: 200px;
     height: 50px;
-    color: green;
+    color: var(--succeedText);
     font-family: Mu'Montserrat', sans-serifkta;
 }
