--- a/src/sections/forgot-password/forgot-password.css
+++ b/src/sections/forgot-password/forgot-password.css
@@ -5,7 +5,7 @@
     transform: translate(-50%, 0);
     width: 200px;
     height: 50px;
-    color: green;
+    color: var(--succeedText);
 }
 
 .recovery-sent-confirmation-message.mobile.portrait{
