--- a/src/sections/leaderboard/leaderboard.css
+++ b/src/sections/leaderboard/leaderboard.css
@@ -12,5 +12,5 @@
     transform: translate(-50%, 0%);
     left: 50%;
     width: 80vw;
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid var(--borderLight);
 }
