--- a/src/sections/room/room.css
+++ b/src/sections/room/room.css
@@ -12,7 +12,7 @@
     transform: translate(-50%, 0%);
     left: 50%;
     width: 80vw;
-    border-bottom: 2px solid gray;
+    border-bottom: 2px solid var(--borderLight);
 }
 
 .room-table-container.desktop{
