dark theme fixes

--- a/src/components/main-container/main-container.css
+++ b/src/components/main-container/main-container.css
@@ -7,7 +7,7 @@ body {
 
 :root{
   --headers: #202020;
-  --regularText: #a9a9a9; 
+  --regularText: #717171; 
   --inputText: #000000;
   --formsBckgr: #ffffff;
   --mainBckgr: #e7e7e7;
