--- a/src/components/main-container/main-container.css
+++ b/src/components/main-container/main-container.css
@@ -7,7 +7,7 @@ body {
 
 :root{
   --headers: #202020;
-  --regularText: #717171; 
+  --regularText: #303030; 
   --inputText: #000000;
   --formsBckgr: #ffffff;
   --mainBckgr: #e7e7e7;
@@ -31,7 +31,7 @@ body {
   --regularText: #d3d3d3; 
   --inputText: #ffffff;
   --formsBckgr: #131313;
-  --mainBckgr: #3b3b3b;
+  --mainBckgr: #4d4c4c;
   --error: #b10000;
   --secondary: #5dc2fc;
   --primary: #13428f;
