styling fixes + info update

--- a/api/app/templates/email/register.html
+++ b/api/app/templates/email/register.html
@@ -9,12 +9,12 @@
 ">
     <div style="
         background-color: hsl(0, 0%, 0%, 0.7);
-        border: 1px solid #58f958;
+        border: 1px solid #5dc2fc;
         border-radius: 2%;
-        color: #58f958;
+        color: #5dc2fc;
         padding: 5px;
     ">
-        <p>Dear <b style="color: #5dc2fc">{{ user.username }}</b>,</p>
+        <p>Dear <b style="color: #13428f">{{ user.username }}</b>,</p>
         <p>You are successfully registered in Nägels Application.</p>
         <p>You can start playing now!</p>
         <p>Sincerely,</p>
