--- a/api/app/templates/email/feedback.html
+++ b/api/app/templates/email/feedback.html
@@ -7,12 +7,12 @@
     background: linear-gradient(90deg, #0a2b61 0%, #5dc2fc 50%, #13428f 100%);
     padding: 20px
 ">
-    <p>New feedback message from Nägels app user <b style="color: #5dc2fc">{{ sender_name }}</b></p>
+    <p>New feedback message from Nägels app user <b style="color: #13428f">{{ sender_name }}</b></p>
     <div style="
         background-color: hsl(0, 0%, 0%, 0.7);
-        border: 1px solid #58f958;
+        border: 1px solid #5dc2fc;
         border-radius: 2%;
-        color: #58f958;
+        color: #5dc2fc;
         padding: 5px;
     ">
         <p>{{ message }}</p>
