--- a/api/app/templates/email/reset_password.html
+++ b/api/app/templates/email/reset_password.html
@@ -9,9 +9,9 @@
 ">
     <div style="
         background-color: hsl(0, 0%, 0%, 0.7);
-        border: 1px solid #58f958;
+        border: 1px solid #5dc2fc;
         border-radius: 2%;
-        color: #58f958;
+        color: #5dc2fc;
         padding: 5px;
     ">
         <p>Dear <b style="color: #5dc2fc">{{ user.username }}</b>,</p>
