table action message styling fixes

--- a/src/components/table-action-message/table-action-message.css
+++ b/src/components/table-action-message/table-action-message.css
@@ -30,6 +30,7 @@
     color: var(--primary);
     font-weight: 900;
     padding: 2px;
+    min-height: 35px;
 }
 
 .action-message-text.highlighted{
