--- a/src/components/table-action-message/table-action-message.css
+++ b/src/components/table-action-message/table-action-message.css
@@ -37,3 +37,11 @@
     color: var(--primary);
     font-weight: bold;
 }
+
+.c.trump-container.action-message-text:after{
+    color: black;
+}
+
+.s.trump-container.action-message-text:after{
+    color: black;
+}
