register email template fix

--- a/api/app/templates/email/register.html
+++ b/api/app/templates/email/register.html
@@ -17,6 +17,7 @@
         <p>Dear <b style="color: #13428f">{{ user.username }}</b>,</p>
         <p>You are successfully registered in Nägels Application.</p>
         <p>You can start playing now!</p>
+        <p><a href="https://nigels.online/about">Here</a> are some game main rules and basic steps for newcomers</p>
         <p>Sincerely,</p>
         <p>Nägels application team</p>
     </div>
