discard maxscroll func in react and fixing navmenu

--- a/src/components/nav-menu/nav-menu.css
+++ b/src/components/nav-menu/nav-menu.css
@@ -2,6 +2,7 @@
     position: absolute;
     background-color: var(--contrastControlPanel);
     z-index: 200;
+    position: fixed;
 }
 
 .nav-menu.mobile.portrait{
