--- a/src/sections/game/game.css
+++ b/src/sections/game/game.css
@@ -164,3 +164,19 @@
     content: "\2298";
     color: var(--blackSuit);
 }
+
+.c.trump-container.fourcolor:after{
+    color: #308552;
+}
+
+.s.trump-container.fourcolor:after{
+    color: var(--blackSuit);
+}
+
+.d.trump-container.fourcolor:after{
+    color: #0094FF;
+}
+
+.h.trump-container.fourcolor:after{
+    color: #BE1931;
+}
