--- a/src/components/form-container/form-container.css
+++ b/src/components/form-container/form-container.css
@@ -39,3 +39,11 @@
 .form-element-container{
     margin: 10px;
 }
+
+.form-message-container{
+    position: relative;
+    width: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--succeedText);
+}
