--- a/src/components/table-put-cards/table-put-cards.css
+++ b/src/components/table-put-cards/table-put-cards.css
@@ -178,7 +178,7 @@
 
 .put-card-avatar{   
     position: absolute;
-    opacity: 60%;
+    /*opacity: 50%;*/
     border: 0.5px solid var(--primary);
     border-radius: 50%;
 }
