--- a/api/app/templates/email/reset_password.html
+++ b/api/app/templates/email/reset_password.html
@@ -23,6 +23,7 @@
         </p>
         <p>Alternatively, you can paste the following link in your browser's address bar:</p>
         <p>{{ nagels_url }}/reset-password/{{ token }}</p>
+        <p>Link is valid for 1 hour from now.</p>
         <p>If you have not requested a password reset simply ignore this message.</p>
         <p>Sincerely,</p>
         <p>Nägels application team</p>
