--- a/src/components/onboarding-container/onboarding-container.css
+++ b/src/components/onboarding-container/onboarding-container.css
@@ -60,3 +60,8 @@
     margin-right: 10px;
     margin-top: 10px;
 }
+
+.onboarding-image-container{
+    margin-left: auto;
+    margin-right: auto;
+}
